--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="container">
         <h1>DragonBornPicker</h1>
-        <input class="input-text" type="text" placeholder="İsim girin..">
-        <a onclick="Onclick()" class="ekle">Ekle</a>
-        <i id="plus" class="fas fa-plus-circle"></i>
-    </div>
-    <div class="container" style="margin-left: 100px;">
-        <div class="list">
+        <div class="head">
+            <input class="input-text" type="text" placeholder="İsim girin..">
+            <a onclick="Onclick()" class="ekle"><i id="plus" class="fas fa-plus-circle"></i>Ekle</a>
         </div>
-        <a onclick="Cek()" class="çek">Çek</a>
-        <i id="dice" class="fas fa-dice-d6"></i>
+        <div class="bottom">
+            <div class="list">
+            </div>
+            <a onclick="Cek()" class="çek"><i id="dice" class="fas fa-dice-d6"></i>Çek</a>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
