--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h1>DragonBornPicker</h1>
         <div class="head">
             <input class="input-text" type="text" placeholder="İsim girin..">
-            <a onclick="Onclick()" class="ekle"><i id="plus" class="fas fa-plus-circle"></i>Ekle</a>
         </div>
         <div class="bottom">
             <div class="list">
             </div>
-            <a onclick="Cek()" class="çek"><i id="dice" class="fas fa-dice-d6"></i>Çek</a>
+            <a class="çek"><i id="dice" class="fas fa-dice-d6"></i>Çek</a>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
