--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container">
         <h1>DragonBornPicker</h1>
         <div class="head">
-            <input class="input-text" type="text" placeholder="İsim girin..">
+            <input class="input-text" type="text" placeholder="Name..">
         </div>
         <div class="bottom">
             <div class="list">
             </div>
-            <a class="çek"><i id="dice" class="fas fa-dice-d6"></i>Çek</a>
+            <a class="çek"><i id="dice" class="fas fa-dice-d6"></i>Roll</a>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
